--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: sachinph05@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A collection of deep-dive technical blogs on backend, JHipster, and system design.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://sachi76.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://sachi76.github.io/technical-blogs/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: sachi76
 
 # Build settings
